--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Icon
 # Thumbnails
 ._*
 
-### All entried below are redundant for now, but may be useful if the project scales up significantly
+### All entries below are redundant for now, but may be useful if the project scales up significantly
 
 # Files that might appear at the root of a volume
 .DocumentRevisions-V100
